# pagination-mark

./: README.md  pagination_mark.py  pyproject.toml
tests/: test_pagination_mark.py
