[tool.poetry]
name = "pagination-mark"
version = "0.1.0"
description = ""
authors = ["William Vaughn <vaughnwilld@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "=19.3b0"
flake8 = "^3.7"
pytest = "^5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
