[tool.poetry]
name = "pagination-mark"
version = "0.1.0"
description = "Helps encoding and decoding of pagination markers."
authors = ["William Vaughn <vaughnwilld@gmail.com>"]
repository = "https://github.com/nackjicholson/pagination-mark"
readme = "README.md"
keywords = ["pagination", "tokens", "mark"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "=19.3b0"
flake8 = "^3.7"
pytest = "^5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
